basic search by service name and version number on respective APIs
